small change to media query correcting text on directors panel when goes on 2 lines, wrapping error basically with margin

--- a/css/mycomponents/_team.scss
+++ b/css/mycomponents/_team.scss
@@ -36,6 +36,13 @@ section#team{
 		color: $gold;
 		text-transform: uppercase;
 	}
+	div.panel.directors h3{
+		// Small condition for text going onto 2 lines with small screens
+		margin-top: -1px;
+		@include phone{
+			margin-top: 10px;
+		}
+	}
 
 	h5{
 		margin-top: -20px;
